# atlas

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
app/: config.yaml  main.py
atlas/: __init__.py  __main__.py  agents.py  paths.py
atlas/context/: __init__.py  business_rules.py  semantic_model.py
atlas/core/: __init__.py  agent.py  knowledge.py  learning.py  models.py  tools.py  vector_store.py
atlas/knowledge/business/: imdb_rules.json
atlas/knowledge/queries/: imdb_queries.sql
atlas/knowledge/tables/: crew.json  people.json  principals.json  ratings.json  titles.json
atlas/scripts/: __init__.py  init_db.py  load_imdb.py  load_knowledge.py
atlas/tools/: __init__.py  introspect.py  save_query.py  sql.py  web_search.py
db/: __init__.py  session.py
