[project]
name = "atlas"
version = "1.0.0"
description = "Atlas - A self-learning SQL intelligence layer that maps your entire data world"
requires-python = ">=3.12,<4"
readme = "README.md"
authors = [{ name = "Aman Singh", email = "your@email.com" }]

dependencies = [
  "fastapi[standard]",
  "httpx",
  "openai",
  "opentelemetry-api",
  "opentelemetry-sdk",
  "pandas",
  "pgvector",
  "psycopg[binary]",
  "sqlalchemy",
]

[project.optional-dependencies]
dev = ["mypy", "ruff"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["atlas*", "db*", "app*"]

[tool.ruff]
line-length = 120
exclude = [".venv*"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.mypy]
check_untyped_defs = true
no_implicit_optional = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
exclude = [".venv*"]

[[tool.mypy.overrides]]
module = ["pgvector.*", "setuptools.*", "pandas.*", "httpx.*"]
ignore_missing_imports = true

[tool.uv.pip]
no-annotate = true
